<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="265dp"
        android:text="@string/click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinImage"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:text="@string/topcomment1"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/diceImage1"
        android:layout_width="173dp"
        android:layout_height="155dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="51dp"
        android:contentDescription="@string/diceimage1"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/diceImage2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinImage"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/diceImage2"
        android:layout_width="207dp"
        android:layout_height="152dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="56dp"
        android:contentDescription="@string/diceimage2"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/diceImage1"
        app:layout_constraintTop_toBottomOf="@+id/coinImage"
        app:layout_constraintVertical_bias="1.0"
        tools:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/coinImage"
        android:layout_width="142dp"
        android:layout_height="131dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="154dp"
        android:contentDescription="@string/coinimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/coin1" />

</androidx.constraintlayout.widget.ConstraintLayout>